<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_C"
    android:gravity="center_horizontal"
    android:layout_weight="1">

    <TextView
        android:layout_height="wrap_content"
        android:text="@string/smart_T"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/dp30_S"
        android:textSize="@dimen/sp30_S"
        android:textStyle="bold"
        android:textColor="@color/black_C"
        />
    <TextView
        android:layout_height="wrap_content"
        android:text="@string/service_T"
        android:layout_width="wrap_content"
        android:textSize="@dimen/sp30_S"
        android:textStyle="bold"
        android:textColor="@color/black_C"
        />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/mainExplain_T"
        android:layout_margin="@dimen/dp30_S"
        android:textSize="@dimen/sp20_S"
        android:textStyle="bold"
        android:textColor="@color/black_C"
        />
    <!--출생년도-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp20_S"
            android:id="@+id/birthYearTv"
            android:textColor="@color/black_C"
            android:text="@string/birthYear_T" />

        <EditText
            android:id="@+id/birthYearEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20_S"
            android:maxEms="4"
            android:maxLength="4"
            android:background="@drawable/border"
            android:textColor="@color/black_C"
            android:hint="@string/birthYear_T_H"
            android:textSize="@dimen/dp20_S"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp20_S"
            android:text="@string/sex_T"
            android:textColor="@color/black_C"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp20_S"
            android:id="@+id/sexRg">
            <RadioButton
                android:id="@+id/maleRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/dp20_S"
                android:text="@string/male_T"
                android:textColor="@color/black_C"/>

            <RadioButton
                android:id="@+id/femaleRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dp20_S"
                android:layout_weight="1"
                android:text="@string/female_T"
                android:textColor="@color/black_C"
                />
        </RadioGroup>

     </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp20_S"
            android:layout_marginLeft="@dimen/dp20_S"
            android:text="@string/phone_T"
            android:textColor="@color/black_C"
            />

        <EditText
            android:id="@+id/phoneFirstEt"
            android:layout_width="@dimen/dp80_S"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp20_S"
            android:layout_marginLeft="@dimen/dp20_S"
            android:layout_marginRight="@dimen/dp20_S"
            android:maxLength="3"
            android:inputType="number"
            android:background="@drawable/border"
            android:textColor="@color/black_C"
             />

        <EditText
            android:id="@+id/phoneMidlleEt"
            android:layout_width="@dimen/dp80_S"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dp20_S"
            android:layout_marginRight="@dimen/dp20_S"
            android:maxLength="4"
            android:inputType="number"
            android:background="@drawable/border"
            android:textColor="@color/black_C"
            />

        <EditText
            android:id="@+id/phoneLastEt"
            android:layout_width="@dimen/dp80_S"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp20_S"
            android:layout_marginRight="@dimen/dp20_S"
            android:maxLength="4"
            android:inputType="number"
            android:background="@drawable/border"
            android:textColor="@color/black_C"
            />

    </LinearLayout>

    <Button
        android:id="@+id/confirmBt"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dp30_S"
        android:layout_marginLeft="@dimen/dp30_S"
        android:paddingBottom="@dimen/dp10_S"
        android:paddingTop="@dimen/dp10_S"
        android:gravity="center_horizontal"
        android:textSize="@dimen/sp30_S"
        android:textColor="@color/white_C"
        android:background="@drawable/rounded_conner"
        android:text="@string/confirm_T"
        android:layout_marginBottom="@dimen/dp30_S"/>
</LinearLayout>